--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- 引入样式 -->
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-<!-- 引入组件库 -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!-- 引入组件库 -->
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+
     <title>enterprise_library_web</title>
+    <style>
+  body{
+  margin:0;
+  padding:0;
+}
+    </style>
   </head>
-  <body>
+  <body >
     <noscript>
       <strong>We're sorry but enterprise_library_web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
